# pyck

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.ps1  setup.sh  test.ps1  test.sh
.devcontainer/: devcontainer.json
src/pyck/aws/: account.py  ec2.py  organizations.py  service.py  utils.py
src/pyck/helpers/: logging.py  taskmanager.py
src/pyck/test/: test.py
src/pyck/utils/: styles.py
