[build-system]
requires = ["setuptools >= 69.2", "wheel >= 0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "pyck"
version = "0.0.1"
description = "Various Python helpers and utilities"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Tan Chang Kiat", email = "tanchangkiat@gmail.com" }]

requires-python = ">=3.9"
dependencies = ["alive-progress==1.0", "boto3==1.34.81"]
