[build-system]
requires = ["setuptools >= 78", "wheel >= 0.45"]
build-backend = "setuptools.build_meta"

[project]
name = "pyck"
version = "0.0.1"
description = "Various Python helpers and utilities"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Tan Chang Kiat", email = "tanchangkiat@gmail.com" }]

requires-python = ">=3.9"
dependencies = ["alive-progress==3.2.0", "boto3==1.37.20"]
